(executable
 (name 1)
 (modules 1)
 (libraries core))
(executable
 (name 2)
 (modules 2)
 (libraries core re2))
(executable
 (name 3)
 (modules 3)
 (libraries core))
(executable
 (name 4)
 (modules 4)
 (libraries core re2))
(executable
 (name 5)
 (modules 5)
 (libraries core))
(executable
 (name 6)
 (modules 6)
 (libraries core re2))
(executable
 (name 7)
 (modules 7)
 (libraries core re2))
(executable
 (name 8)
 (modules 8)
 (libraries core re2))
(executable
 (name 9)
 (modules 9)
 (libraries core))
